kubernetes/base/config-service.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-service
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: config-service
  template:
    metadata:
      labels:
        app: config-service

    spec:
      containers:
        - name: name
          ports:
            - containerPort: 8080
