kubernetes/base/pdfmaker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdfmaker
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: pdfmaker
  template:
    metadata:
      labels:
        app: pdfmaker

    spec:
      containers:
      - name: name
        ports:
          - containerPort: 8080
