kubernetes/base/ui.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui

    spec:
      containers:
      - name: name
        image:  IMAGE
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
