kubernetes/base/user-service.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service

    spec:
      containers:
        - name: name
          ports:
            - containerPort: 8080
