kubernetes/base/config-service.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: config-service
