kubernetes/base/pdfmaker.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdf-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: pdf-service
