kubernetes/base/ui.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: ui
