kubernetes/base/user-service.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: user-service
