kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
      - host
      secretName: tlscert
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: ui
                port: 
                  number: 8080          
          - path: /api/generate
            pathType: Prefix      
            backend:
              service: 
                name: pdfmaker
                port: 
                  number: 8080
          - path: /api/config
            pathType: Prefix
            backend:
              service:
                name: config-service
                port: 
                  number: 8080
          - path: /api/template
            pathType: Prefix
            backend:
              service: 
                name: pdfmaker
                port: 
                  number: 8080
